--- a/main.css
+++ b/main.css
@@ -20,11 +20,21 @@ fieldset {
   border: none;
 }
 
-fieldset input{
+form label {
+  display: block;
+}
+
+form input{
   margin: 5px 0;
 }
 
 button {
-  padding: 2px;
+  padding: 4px 8px;
   cursor: pointer;
+}
+
+#book-list ul li{
+  margin: 5px 0;
+  padding: 10px;
+  border-bottom: 1px solid #a0a0a0;
 }
