--- a/main.css
+++ b/main.css
@@ -11,11 +11,62 @@ body {
   padding: 15px;
 }
 
+header {
+  text-align: center;
+}
+
+ul li {
+  display: flex;
+  justify-content: space-between;
+}
+
 ul {
   list-style: none;
   margin: 15px 0;
+  border: 2px solid black;
 }
+ h2 {
+  text-align: center;
+  margin-top: 3rem;
+ }
 
+ .formfields {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+ }
+
+ .hr-line {
+  padding-top: 0.5rem;
+  display: flex;
+  flex-direction: column;
+ }
+
+ hr {
+  width: 20vw;
+  align-self: center;
+ }
+
+ form {
+  padding: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: fit-content;
+ }
+
+ form fieldset {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ }
+
+ .add-btn {
+  width: 5rem;
+  height: 2rem;
+  align-self: flex-end;
+ }
 fieldset {
   border: none;
 }
@@ -33,8 +84,12 @@ button {
   cursor: pointer;
 }
 
+#book-list ul li:nth-child(even) {
+  background-color: grey;
+}
+
+
 #book-list ul li {
   margin: 5px 0;
   padding: 10px;
-  border-bottom: 1px solid #a0a0a0;
 }
