--- a/main.css
+++ b/main.css
@@ -85,8 +85,8 @@ button {
   cursor: pointer;
 }
 
-#book-list ul li {np
-  padding: 10px;
+#book-list ul li {
+  padding: 15px;
 }
 
 #book-list ul li:nth-child(even) {
