--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@ ul li {
   justify-content: space-between;
 }
 
-ul {
+#book-list ul {
   list-style: none;
   margin: 15px 0;
   border: 2px solid black;
