--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+/* stylelint-disable no-descending-specificity */
 html {
   scroll-behavior: smooth;
 }
@@ -11,33 +12,61 @@ body {
   padding: 15px;
 }
 
+.hide {
+  display: none !important;
+}
+
+section {
+  padding-top: 75px;
+}
+
 #navbar {
   display: flex;
   justify-content: space-between;
   border: 2px solid black;
-  padding: 2px;
+  padding: 5px 5px;
+  position: fixed;
+  top: 15px;
+  right: 15px;
+  left: 15px;
+  align-items: center;
+}
+
+#navbar h5 {
+  font-size: 1.3rem;
+  margin-left: 5px;
 }
 
 #navbar nav ul {
   display: flex;
+  list-style: none;
 }
 
 #navbar nav ul li {
   padding: 0 8px 0 8px;
 }
 
-#navbar nav ul li:nth-child(2){
+#navbar nav ul li:nth-child(2) {
   border-left: 1px solid black;
   border-right: 1px solid black;
+}
+
+#navbar nav a {
+  cursor: pointer;
+}
+
+#navbar nav a:hover {
+  color: #3f3f3f;
 }
 
 header {
   text-align: center;
 }
 
-ul li {
+#book-list ul li {
   display: flex;
   justify-content: space-between;
+  padding: 15px;
 }
 
 #book-list ul {
@@ -51,21 +80,10 @@ h2 {
   margin-top: 3rem;
 }
 
-.formfields {
+#formfields {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.hr-line {
-  padding-top: 0.5rem;
-  display: flex;
-  flex-direction: column;
-}
-
-hr {
-  width: 20vw;
-  align-self: center;
 }
 
 form {
@@ -84,6 +102,11 @@ form fieldset {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+form fieldset input {
+  width: 250px;
+  padding: 5px 2px;
 }
 
 .add-btn {
@@ -105,10 +128,6 @@ button {
   cursor: pointer;
 }
 
-#book-list ul li {
-  padding: 15px;
-}
-
 #book-list ul li:nth-child(even) {
   background-color: grey;
 }
@@ -116,18 +135,21 @@ button {
 #contact {
   display: flex;
   flex-direction: column;
-  text-align: center;
   align-items: center;
   padding-bottom: 5rem;
 }
 
-#contact p ul {
+#contact ul {
   width: 200px;
-  list-style-type: disc;
+  margin-top: 25px;
 }
 
 footer {
   border: 2px solid black;
-  padding: 2px;
+  padding: 5px 10px;
   margin-top: 15px;
+  position: fixed;
+  bottom: 15px;
+  right: 15px;
+  left: 15px;
 }
