--- a/main.css
+++ b/main.css
@@ -18,6 +18,7 @@ body {
 
 section {
   padding-top: 75px;
+  min-height: 75vh;
 }
 
 #navbar {
@@ -57,6 +58,12 @@ section {
 
 #navbar nav a:hover {
   color: #3f3f3f;
+}
+
+#datetime {
+  position: absolute;
+  top: 65px;
+  right: 15px;
 }
 
 header {
@@ -136,7 +143,6 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 5rem;
 }
 
 #contact ul {
@@ -148,8 +154,8 @@ footer {
   border: 2px solid black;
   padding: 5px 10px;
   margin-top: 15px;
-  position: fixed;
+  /* position: absolute;
   bottom: 15px;
   right: 15px;
-  left: 15px;
+  left: 15px; */
 }
